--- a/views/client/pages/product/detail.view.ejs
+++ b/views/client/pages/product/detail.view.ejs
@@ -187,7 +187,8 @@
       </section>
       <!-- End product detail -->
 
-      <section class="py-5 product-format_detail">
+      <!-- Start product detail description -->
+      <section class="pt-5 product-format_detail">
         <div class="container">
           <div class="row">
             <div class="col-12">
@@ -196,6 +197,72 @@
           </div>
         </div>
       </section>
+      <!-- End product detail description -->
+
+      <!-- Start related products -->
+      <section class="pb-5 related-products">
+        <h3 class="heading-font text-center related-products__title">Sản phẩm liên quan</h3>
+
+        <div class="container">
+          <div class="row justify-content-center g-2">
+            <% if(relatedProductList.length === 0) { %><span class="content-font text-center"
+              >(Không tìm thấy sản phẩm phù hợp)</span
+            ><% } %> <% relatedProductList.forEach(product => { %>
+            <div class="col-lg-2 col-md-4 col-6">
+              <div class="card__bg" title="<%= product.title %>">
+                <div class="card__image">
+                  <img
+                    src="<%= product.thumbnail %>"
+                    alt="product"
+                    width="100%"
+                    class="card__thumbnail"
+                  />
+                  <div class="card__link">
+                    <a
+                      href="/products/detail/<%= product.slug %>"
+                      class="content-font card__link-detail"
+                      >Xem chi tiết</a
+                    >
+                  </div>
+                </div>
+                <div class="content-font card__title mt-1">
+                  <% if(product.title.length > 25) { %> <%= product.title.slice(0, 25) + '...' %> <%
+                  } else { %> <%= product.title %> <% } %>
+                </div>
+                <div class="card__box d-flex justify-content-between align-items-center">
+                  <h5 class="title-font card__price">
+                    <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
+                    }).format(Number.parseFloat(product.price - (product.price / 100 *
+                    product.discount))) %>
+                  </h5>
+                  <div class="card__favorite">
+                    <i class="bi bi-suit-heart-fill"></i>
+                  </div>
+                </div>
+                <div class="content-font text-danger text-decoration-line-through">
+                  Giá gốc: <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
+                  }).format(product.price) %>
+                </div>
+                <div class="card__rating d-flex justify-content-between align-items-center">
+                  <div class="card__star">
+                    <% for(let i = 1; i <= product.rating; i++) { %>
+                    <i class="bi bi-star-fill"></i>
+                    <% } %>
+                  </div>
+                  <form <% if(product.stock>
+                    0) { %> action="/cart/add/<%= product.id %>" method="POST" <% } %>>
+                    <button type="submit" class="border-0 bg-transparent">
+                      <i title="add to cart" class="bi bi-bag-check-fill"></i>
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </div>
+            <% }) %>
+          </div>
+        </div>
+      </section>
+      <!-- End related products -->
     </main>
 
     <form
