--- a/public/client/styles/pages/product/detail.css
+++ b/public/client/styles/pages/product/detail.css
@@ -20,9 +20,12 @@
 .card__related-slide .button__trans .slick-list {
   padding: 20px 0px;
 }
-.card__related-slide .card__bg {
+/* Product Card */
+.card__bg {
   width: 100%;
+  /* height: 100% !important; */
   padding: 10px;
+  height: auto;
   color: var(--dark-gray-color);
   font-family: var(--primary-font-family);
   text-decoration: none;
@@ -30,23 +33,23 @@
   cursor: pointer;
   transition: 0.2s ease-in-out;
 }
-.card__related-slide .card__bg:hover {
+.card__bg:hover {
   background: var(--light-primary-color);
   transform: translateY(-5px);
   transition: 0.2s ease-in-out;
 }
-.card__related-slide .card__bg .card__image {
+.card__bg .card__image {
   width: 100%;
   aspect-ratio: 3/3;
   position: relative;
   overflow: hidden;
 }
-.card__related-slide .card__bg .card__image .card__thumbnail {
+.card__bg .card__image .card__thumbnail {
   object-fit: cover;
   position: absolute;
   z-index: 499;
 }
-.card__related-slide .card__bg .card__image .card__link {
+.card__bg .card__image .card__link {
   width: 100%;
   height: 100%;
   background: #0000009e;
@@ -59,49 +62,49 @@
   transform: translateY(-101%);
   transition: 0.3s ease-out;
 }
-.card__related-slide .card__bg:hover .card__image .card__link {
+.card__bg:hover .card__image .card__link {
   transform: translateY(0%);
 }
-.card__related-slide .card__bg .card__image .card__link .card__link-detail {
+.card__bg .card__image .card__link .card__link-detail {
   display: block;
   text-decoration: none;
   color: var(--primary-color);
   padding: var(--padding-button);
   border: var(--border-thickness-button) solid var(--primary-color);
 }
-.card__related-slide .card__bg .card__image .card__link .card__link-detail:hover {
+.card__bg .card__image .card__link .card__link-detail:hover {
   text-decoration: underline;
 }
-.card__related-slide .card__bg .card__box {
+.card__bg .card__box {
   margin: 3px 0px;
   border-bottom: 1px solid var(--light-gray-color);
   border-radius: 0.5px;
 }
-.card__related-slide .card__bg:hover .card__box {
+.card__bg:hover .card__box {
   border-bottom: 1px solid var(--dark-gray-color);
   transition: 0.4s ease-out;
 }
-.card__related-slide .card__bg .card__box .card__price {
+.card__bg .card__box .card__price {
   color: var(--primary-color);
 }
-.card__related-slide .card__bg .card__box i {
+.card__bg .card__box i {
   padding: 6.5px 8px 5.5px 8px;
   background: none;
   color: var(--dark-gray-color);
   font-size: var(--icon-font-size);
 }
-.card__related-slide .card__bg .card__rating .card__star i {
+.card__bg .card__rating .card__star i {
   font-size: var(--icon-font-size2);
   color: var(--dark-gray-color);
 }
-.card__related-slide .card__bg .card__rating i.bi-bag-check-fill {
+.card__bg .card__rating i.bi-bag-check-fill {
   font-size: var(--icon-font-size);
   padding: 4px 8px;
   color: var(--dark-gray-color);
   background: none;
   border: 1px solid var(--dark-gray-color);
 }
-.card__related-slide .card__bg .card__rating i.bi-bag-check-fill:hover {
+.card__bg .card__rating i.bi-bag-check-fill:hover {
   color: var(--light-gray-color);
   background: var(--dark-gray-color);
   transition: 0.4s ease-out;
