create register page ui client

--- a/public/client/setup.css
+++ b/public/client/setup.css
@@ -54,6 +54,7 @@
   --title-font-size: 20px;
   --content-font-size: 15px;
   --paragraph-font-size: ;
+  --error-font-size: 13px;
   --icon-font-size: 15px;
   --icon-font-size2: 12px;
 
