--- a/views/client/partials/header.view.ejs
+++ b/views/client/partials/header.view.ejs
@@ -147,6 +147,11 @@
                   >
                 </li>
                 <li class="auth-item">
+                  <a href="/register" class="auth-link"
+                    ><i class="fa-solid fa-right-to-bracket"></i>Đăng ký</a
+                  >
+                </li>
+                <li class="auth-item">
                   <a href="/login" class="auth-link"
                     ><i class="fa-solid fa-right-from-bracket"></i>Đăng xuất</a
                   >
