--- a/views/client/pages/payment/payment.view.ejs
+++ b/views/client/pages/payment/payment.view.ejs
@@ -100,7 +100,11 @@
                                   class="input-type01 w-100 payment-info-form-inp form-inp-fullname"
                                 />
                                 <span
-                                  class="text-danger fs-6 fs-6 payment-info-form-error form-error-fullname"
+                                  class="payment-info-form-error form-error-fullname"
+                                  style="
+                                    color: var(--error-color);
+                                    font-size: var(--error-font-size);
+                                  "
                                 ></span>
                               </div>
                             </div>
@@ -119,7 +123,11 @@
                                   class="input-type01 w-100 payment-info-form-inp form-inp-phone"
                                 />
                                 <span
-                                  class="text-danger fs-6 payment-info-form-error form-error-phone"
+                                  class="payment-info-form-error form-error-phone"
+                                  style="
+                                    color: var(--error-color);
+                                    font-size: var(--error-font-size);
+                                  "
                                 ></span>
                               </div>
                             </div>
@@ -139,7 +147,8 @@
                             class="input-type01 payment-info-form-inp form-inp-email"
                           />
                           <span
-                            class="text-danger fs-6 payment-info-form-error form-error-email"
+                            class="payment-info-form-error form-error-email"
+                            style="color: var(--error-color); font-size: var(--error-font-size)"
                           ></span>
                         </div>
                         <div
@@ -158,7 +167,8 @@
                             class="input-type01 payment-info-form-inp form-inp-address"
                           />
                           <span
-                            class="text-danger fs-6 payment-info-form-error form-error-address"
+                            class="payment-info-form-error form-error-address"
+                            style="color: var(--error-color); font-size: var(--error-font-size)"
                           ></span>
                           <div
                             class="position-absolute w-100 top-100 p-2 shadow bg-white payment-info-form-map form-map-address"
@@ -200,7 +210,8 @@
                             >
                           </div>
                           <span
-                            class="text-danger fs-6 payment-info-form-error form-error-checkout"
+                            class="payment-info-form-error form-error-checkout"
+                            style="color: var(--error-color); font-size: var(--error-font-size)"
                           ></span>
                         </div>
                         <div class="payment-info-form-input form-input-shipping">
@@ -248,7 +259,8 @@
                             >
                           </div>
                           <span
-                            class="text-danger fs-6 payment-info-form-error form-error-shipping"
+                            class="payment-info-form-error form-error-shipping"
+                            style="color: var(--error-color); font-size: var(--error-font-size)"
                           ></span>
                         </div>
                         <div class="payment-info-form-btn">
