create login page ui client

--- a/views/client/pages/auth/register.view.ejs
+++ b/views/client/pages/auth/register.view.ejs
@@ -111,7 +111,10 @@
                       placeholder="Nhập mật khẩu..."
                       class="input-type01 w-100"
                     />
-                    <button type="button" class="button-icon-primary register-show-password">
+                    <button
+                      type="button"
+                      class="button-icon-primary auth-show-password register-show-password"
+                    >
                       <i class="bi bi-eye-slash"></i>
                     </button>
                   </div>
@@ -133,7 +136,10 @@
                       placeholder="Xác nhận mật khẩu..."
                       class="input-type01 w-100"
                     />
-                    <button type="button" class="button-icon-primary register-show-password">
+                    <button
+                      type="button"
+                      class="button-icon-primary auth-show-password register-show-password"
+                    >
                       <i class="bi bi-eye-slash"></i>
                     </button>
                   </div>
