validate for login form and middleware validate

--- a/views/client/pages/auth/login.view.ejs
+++ b/views/client/pages/auth/login.view.ejs
@@ -144,6 +144,7 @@
 
     <!-- Scripts File -->
     <script src="/client/scripts/auth/showHidePassword.js"></script>
+    <script src="/client/scripts/auth/submitLogin.js"></script>
     <!-- End Scripts File -->
 
     <!-- Scripts Library & Framework Link -->
