complete logout feature client

--- a/views/client/partials/header.view.ejs
+++ b/views/client/partials/header.view.ejs
@@ -152,7 +152,7 @@
                   >
                 </li>
                 <li class="auth-item">
-                  <a href="/login" class="auth-link"
+                  <a href="/logout" class="auth-link"
                     ><i class="fa-solid fa-right-from-bracket"></i>Đăng xuất</a
                   >
                 </li>
