--- a/views/client/pages/auth/register-verify.view.ejs
+++ b/views/client/pages/auth/register-verify.view.ejs
@@ -61,7 +61,7 @@
             </p>
           </div>
           <h1 class="text-center p-0 register-verify-duration heading-font text-uppercase">
-            <%= duration %>
+            <%= duration / 1000 / 60 %>
           </h1>
         </div>
       </div>
