--- a/views/client/pages/product/detail.view.ejs
+++ b/views/client/pages/product/detail.view.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sản phẩm <%= pageTitle %></title>
+    <title><%= pageTitle %></title>
 
     <!-- Styles File -->
     <link rel="stylesheet" href="/client/setup.css" />
