complete add notify for action feature client

--- a/views/client/pages/cart/cart.view.ejs
+++ b/views/client/pages/cart/cart.view.ejs
@@ -8,6 +8,7 @@
 
     <!-- Styles File -->
     <link rel="stylesheet" href="/client/setup.css" />
+    <link rel="stylesheet" href="/client/styles/partials/alert.css" />
     <link rel="stylesheet" href="/client/styles/partials/header.css" />
     <link rel="stylesheet" href="/client/styles/pages/index/index.css" />
     <link rel="stylesheet" href="/client/styles/pages/index/index.responsive.css" />
@@ -36,6 +37,7 @@
     <!-- End Styles Library & Framework Link -->
   </head>
   <body>
+    <%-include('../../partials/alert-message.view.ejs') %>
     <%-include('../../partials/header.view.ejs', { categoryListTree: categoryTree, homeActive: "",
     aboutActive: '', productActive: '', newsActive: '', contactActive: '', cartActive: 'active' });
     %> <%-include("../../partials/header-mobile.view.ejs") %>
@@ -274,6 +276,7 @@
     <%-include('../../partials/footer.view.ejs') %>
 
     <!-- Scripts File -->
+    <script src="/client/scripts/alertMessage.js"></script>
     <script src="/client/scripts/toggleHeaderMobile.js"></script>
     <script src="/client/scripts/cart/deleteProductInCart.js"></script>
     <script src="/client/scripts/cart/changeProductQuantity.js"></script>
