--- a/views/client/pages/auth/register.view.ejs
+++ b/views/client/pages/auth/register.view.ejs
@@ -7,6 +7,7 @@
 
     <!-- Styles File -->
     <link rel="stylesheet" href="/client/setup.css" />
+    <link rel="stylesheet" href="/client/styles/partials/alert.css" />
     <!-- End Styles File -->
 
     <!-- Styles Library & Framework Link -->
@@ -24,6 +25,8 @@
     <!-- End Styles Library & Framework Link -->
   </head>
   <body>
+    <%-include('../../partials/alert-message.view.ejs') %>
+
     <main class="main">
       <div class="w-100 py-5 px-4 d-flex justify-content-center align-items-center register">
         <div
@@ -202,6 +205,7 @@
     </main>
 
     <!-- Scripts File -->
+    <script src="/client/scripts/alertMessage.js"></script>
     <script src="/client/scripts/auth/showHidePassword.js"></script>
     <script src="/client/scripts/auth/submitRegister.js"></script>
     <!-- End Scripts File -->
