--- a/views/client/pages/product/detail.view.ejs
+++ b/views/client/pages/product/detail.view.ejs
@@ -7,6 +7,7 @@
 
     <!-- Styles File -->
     <link rel="stylesheet" href="/client/setup.css" />
+    <link rel="stylesheet" href="/client/styles/partials/alert.css" />
     <link rel="stylesheet" href="/client/styles/partials/header.css" />
     <link rel="stylesheet" href="/client/styles/pages/index/index.css" />
     <link rel="stylesheet" href="/client/styles/pages/index/index.responsive.css" />
@@ -41,6 +42,7 @@
     </style>
   </head>
   <body>
+    <%-include('../../partials/alert-message.view.ejs') %>
     <%-include('../../partials/header.view.ejs', { categoryListTree: categoryTree, homeActive: '',
     aboutActive: '', productActive: "active", newsActive: '', contactActive: '', cartActive: '' });
     %> <%-include("../../partials/header-mobile.view.ejs") %>
@@ -176,7 +178,7 @@
                     <i class="me-1 fa fa-shopping-basket"></i> Add to cart
                   </button>
                   <% } %>
-                  <button href="#" class="button-primary text-decoration-none">
+                  <button type="button" href="#" class="button-primary text-decoration-none">
                     <i class="me-1 fa fa-heart fa-lg"></i> Save
                   </button>
                 </form>
@@ -249,8 +251,7 @@
                     <i class="bi bi-star-fill"></i>
                     <% } %>
                   </div>
-                  <form <% if(product.stock>
-                    0) { %> action="/cart/add/<%= product.id %>" method="POST" <% } %>>
+                  <form action="/cart/add/<%= product.id %>" method="POST">
                     <button type="submit" class="border-0 bg-transparent">
                       <i title="add to cart" class="bi bi-bag-check-fill"></i>
                     </button>
@@ -282,6 +283,7 @@
     <%-include("../../partials/footer.view.ejs") %>
 
     <!-- Scripts File -->
+    <script src="/client/scripts/alertMessage.js"></script>
     <script src="/client/scripts/toggleHeaderMobile.js"></script>
     <script src="/client/scripts/customInputRange.js"></script>
     <script src="/client/scripts/product/showProductFilter.js"></script>
