--- a/views/client/pages/product/product.view.ejs
+++ b/views/client/pages/product/product.view.ejs
@@ -7,6 +7,7 @@
 
     <!-- Styles File -->
     <link rel="stylesheet" href="/client/setup.css" />
+    <link rel="stylesheet" href="/client/styles/partials/alert.css">
     <link rel="stylesheet" href="/client/styles/partials/header.css" />
     <link rel="stylesheet" href="/client/styles/pages/index/index.css" />
     <link rel="stylesheet" href="/client/styles/pages/index/index.responsive.css" />
@@ -36,6 +37,7 @@
     <!-- End Styles Library & Framework Link -->
   </head>
   <body>
+    <%-include('../../partials/alert-message.view.ejs') %>
     <%-include('../../partials/header.view.ejs', { categoryListTree: categoryTree, homeActive: '',
     aboutActive: '', productActive: "active", newsActive: '', contactActive: '', cartActive: '' }); %>
     <%-include("../../partials/header-mobile.view.ejs") %>
@@ -253,7 +255,7 @@
                         <i class="bi bi-star-fill"></i>
                         <% } %>
                       </div>
-                      <form <% if(product.stock > 0) { %> action="/cart/add/<%= product.id %>" method="POST" <% } %>>
+                      <form action="/cart/add/<%= product.id %>" method="POST">
                         <button type="submit" class="border-0 bg-transparent"><i title="add to cart" class="bi bi-bag-check-fill"></i></button>
                       </form>
                     </div>
@@ -310,6 +312,7 @@
     <%-include("../../partials/footer.view.ejs") %>
 
     <!-- Scripts File -->
+    <script src="/client/scripts/alertMessage.js"></script>
     <script src="/client/scripts/toggleHeaderMobile.js"></script>
     <script src="/client/scripts/customInputRange.js"></script>
     <script src="/client/scripts/product/showProductFilter.js"></script>
