complete forgot password and change new password feature client

--- a/views/client/pages/auth/register-verify.view.ejs
+++ b/views/client/pages/auth/register-verify.view.ejs
@@ -48,10 +48,7 @@
           </h1>
           <div class="d-flex flex-column gap-1 register-verify-description">
             <p class="content-font text-center p-0 m-0 register-verify-paragraph">
-              Một email xác thực đã được gửi đến địa chỉ
-            </p>
-            <p class="content-font text-center p-0 m-0 register-verify-paragraph">
-              <b class="fw-bold"><%= email %></b>
+              Một email xác thực đã được gửi đến địa chỉ email của bạn
             </p>
             <p class="content-font text-center p-0 m-0 register-verify-paragraph">
               Vui lòng kiểm tra hộp thư và nhấn vào liên kết để hoàn tất đăng ký.
