--- a/views/client/pages/home/index.view.ejs
+++ b/views/client/pages/home/index.view.ejs
@@ -176,7 +176,7 @@
           <h3 class="heading-font text-center card__feature-heading">Sản Phẩm Nổi Bật</h3>
           <div class="row">
             <div class="col-12">
-              <div class="autoplay button__trans">
+              <div class="autoplay autoplay-card-feature button__trans">
                 <% productList.forEach((product) => { %> <% if(product.featured === '1') {%>
                 <div class="card__bg" title="<%= product.title %>">
                   <div class="card__image">
@@ -259,7 +259,7 @@
           <h3 class="heading-font text-center card__feature-heading">Sản Phẩm Đang Giảm Giá</h3>
           <div class="row">
             <div class="col-12">
-              <div class="autoplay button__trans">
+              <div class="autoplay autoplay-card-sale button__trans">
                 <% productList.forEach((product) => { %> <% if(product. discount !== 0) {%>
                 <div class="card__bg" title="<%= product.title %>">
                   <div class="card__image">
