update cart, update constant file and change logo, add favicon for web

--- a/views/client/partials/footer.view.ejs
+++ b/views/client/partials/footer.view.ejs
@@ -7,11 +7,7 @@
         <div class="footer__about">
           <div class="footer__about-logo mb-4">
             <a href="/"
-              ><img
-                src="/client/images/Benefit_Cosmetics_logo.png"
-                alt="Logo"
-                width="100%"
-                class="bg-white"
+              ><img src="/client/images/logo.png" alt="Logo" width="100%" class="p-3 bg-white"
             /></a>
           </div>
           <h4 class="title-font footer__about-title">Giới thiệu</h4>
