--- a/views/client/partials/header.view.ejs
+++ b/views/client/partials/header.view.ejs
@@ -20,11 +20,7 @@
     <div class="row">
       <div class="col-lg-2 col-12 header-logo mt-2">
         <a href="/" class="header-logo-link"
-          ><img
-            src="/client/images/Benefit_Cosmetics_logo.png"
-            alt="logo"
-            width="130px"
-            class="header-logo-img"
+          ><img src="/client/images/logo.png" alt="logo" width="115px" class="pb-2 pt-1 mt-1 header-logo-img"
         /></a>
       </div>
 
