--- a/views/client/pages/auth/forgot-password.view.ejs
+++ b/views/client/pages/auth/forgot-password.view.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= pageTitle %></title>
+    <link rel="icon" type="image/x-icon" href="/client/images/VENZA_LOGO_FAVICON.png" />
 
     <!-- Styles File -->
     <link rel="stylesheet" href="/client/setup.css" />
