--- a/views/client/partials/header-mobile.view.ejs
+++ b/views/client/partials/header-mobile.view.ejs
@@ -4,11 +4,7 @@
     <div class="row">
       <div class="col-6 header-mobie-logo">
         <a href="/" class="logo-link"
-          ><img
-            src="/client/images/Benefit_Cosmetics_logo.png"
-            alt="logo"
-            width="120px"
-            class="logo-img"
+          ><img src="/client/images/logo.png" alt="logo" width="115px" class="logo-img"
         /></a>
       </div>
       <div class="col-6 header-mobie-menu">
